# standart_library

./: .gitignore  .gitmodules  CMakeLists.txt  basic_usage.cpp  function.h
any/: CMakeLists.txt  any.cpp  any.h  test_main.cpp
atoi/: atoi.cpp
function/: CMakeLists.txt  basic_usage.cpp  function.h  test_main.cpp
move/: CMakeLists.txt  move_and_forward.h
string/: CMakeLists.txt  String.hpp  main.cpp  string  test_main.cpp
string/include/: BasicString.hpp
type_traits/: CMakeLists.txt  main.cpp  type_traits.h
variant/: CMakeLists.txt  main.cpp  variant.h
